--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "filepond": "^4.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-filepond": "^7.0.1",
+    "react-grid-gallery": "^0.5.3",
     "react-scripts": "2.1.3"
   },
   "scripts": {
